--- a/comounirse.html
+++ b/comounirse.html
@@ -32,7 +32,7 @@
   <!-- Formulario de solicitud -->
   <section class="section">
     <p>
-      Actualmente, la <strong>ciudadanía virtual</strong> no está habilitada.  
+      Actualmente, la ciudadanía virtual no está habilitada.  
       Sin embargo, puedes llenar este formulario y recibirás una notificación cuando se active oficialmente.
     </p>
 
