--- a/identidad.html
+++ b/identidad.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Identidad Hernaviana - Hernavia</title>
-<meta name="description" content="Mira qué significa ser parte de Hernavia y el valor de nuestra identidad.">
+<meta name="description" content="Descubre qué significa ser parte de Hernavia y el valor de nuestra identidad cultural.">
 <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
 <link rel="preload" href="estilo.css" as="style">
 <link rel="stylesheet" href="estilo.css">
@@ -40,16 +40,16 @@
     <section class="section">
         <h2>Principios de la Identidad Hernaviana</h2>
         <ul>
-            <li>Paz hernaviana: Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
-            <li>Innovación hernaviana: Crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
-            <li>Respeto hernaviano por la naturaleza y cuidado del agua: Cuidar lo que nos rodea y los recursos vitales como el agua es parte esencial del entorno.</li>
+            <li><strong>Paz hernaviana:</strong> construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
+            <li><strong>Innovación hernaviana:</strong> crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
+            <li><strong>Respeto hernaviano por la naturaleza y cuidado del agua:</strong> cuidar lo que nos rodea y los recursos vitales como el agua es parte esencial de nuestro entorno.</li>
         </ul>
     </section>
 
     <section class="section">
         <h2>Más que un símbolo</h2>
         <p class="texto-largo">
-            La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos,  
+            La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos:  
             son colores para enorgullecerse, para gritar y para seguir.  
             Imagina un partido de fútbol donde grites por Hernavia y sus colores.  
             ¿Te emociona esa idea o tienes otra en mente?
@@ -59,11 +59,11 @@
     <section class="section">
         <h2>La esencia hernaviana</h2>
         <p class="texto-largo">
-            La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
+            La identidad hernaviana representa valores que hoy en día parecen olvidados:  
             el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
             la verdad, el respeto mutuo o hasta el poder salir a la calle sin miedo.  
-            Todos estos siempre se escuchan pero nunca se ven avances reales en ellos.  
-            Así que nosotros tomaremos la batuta para hacer lo que nadie más, aunque no se puede lograr sin ti.  
+            Todos estos siempre se escuchan, pero rara vez se ven avances reales.  
+            Por eso, nosotros tomaremos la batuta para hacer lo que nadie más, aunque no se puede lograr sin ti.  
             Si quieres que las cosas cambien, cambia tú también.  
             Todo eso y más hace parte de ser hernaviano.
         </p>
@@ -72,44 +72,45 @@
     <section class="section" style="text-align:center;">
         <p>Recuérdala, tal vez un día no puedas olvidarla.</p>
         <img src="img/bandera.png" 
-             alt="Bandera Hernavia, identidad cultural relacionada con afrocolombianidad hernaviana" 
+             alt="Bandera de Hernavia, símbolo cultural de la identidad hernaviana" 
              class="bandera" 
              width="283" 
              height="188" 
              fetchpriority="high">
-</section>
+    </section>
     
-<section class="section" style="text-align:center;">
-  <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
+    <section class="section" style="text-align:center;">
+        <h2 style="color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-  <div style="text-align:center;">
-    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-  </div>
+        <div style="text-align:center;">
+            <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+        </div>
 
-  <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+        <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px; text-align:left;">
 
-    <details class="faq-card">
-      <summary style="text-align:left;">¿Qué es Hernavia?</summary>
-      <p style="text-align:left;">Hernavia es una identidad colectiva y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión compartida.</p>
-    </details>
+            <details class="faq-card">
+                <summary>¿Qué es Hernavia?</summary>
+                <p>Hernavia es una identidad colectiva y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión compartida.</p>
+            </details>
 
-    <details class="faq-card">
-      <summary style="text-align:left;">¿Hernavia es un país real?</summary>
-      <p style="text-align:left;">Puedes considerarla una micronación, nación o estado no reconocido oficialmente. Aunque no tenga reconocimiento legal, funciona como comunidad organizada con roles y principios propios.</p>
-    </details>
+            <details class="faq-card">
+                <summary>¿Hernavia es un país real?</summary>
+                <p>Puede considerarse una micronación o comunidad cultural no reconocida oficialmente. Aunque no tenga reconocimiento legal, funciona como una organización con principios, valores y proyectos propios.</p>
+            </details>
 
-    <details class="faq-card">
-      <summary style="text-align:left;">¿Cuáles son los principios de Hernavia?</summary>
-      <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y verdad.</p>
-    </details>
+            <details class="faq-card">
+                <summary>¿Cuáles son los principios de Hernavia?</summary>
+                <p>Se fundamenta en la paz, la innovación, el respeto por la naturaleza, el cuidado del agua, la unión comunitaria y la verdad.</p>
+            </details>
 
-    <details class="faq-card">
-      <summary style="text-align:left;">¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
-      <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
-    </details>
+            <details class="faq-card">
+                <summary>¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
+                <p>Sí. Aunque no tengas ciudadanía hernaviana, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
+            </details>
 
-  </div>
-</section>
+        </div>
+    </section>
+</main>
 
 <footer>
     &copy; 2025 Hernavia - Proyecto Cultural
