--- a/identidad.html
+++ b/identidad.html
@@ -1,81 +1,132 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sugerencias - Hernavia</title>
-  <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-
-  <!-- CSS general -->
-  <link rel="preload" href="estilo.css" as="style">
-  <link rel="stylesheet" href="estilo.css">
-
-  <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Proyecto Hernavia">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Identidad Hernaviana - Hernavia</title>
+<meta name="description" content="Descubre qué significa ser parte de Hernavia y el valor de nuestra identidad cultural.">
+<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+<link rel="preload" href="estilo.css" as="style">
+<link rel="stylesheet" href="estilo.css">
+<link rel="canonical" href="https://hernavia.github.io/Hernavia/identidad.html">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Proyecto Hernavia">
 </head>
-
 <body>
-  <header>
-    <h1>Envía tus sugerencias</h1>
-  </header>
 
-  <nav class="nav-comun">
+<header>
+    <h1>La Identidad Hernaviana</h1>
+</header>
+
+<nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="consultas.html">Consultas</a>
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html" class="activo">Sugerencias</a>
-  </nav>
+    <a href="sugerencias.html">Sugerencias</a>
+</nav>
 
-  <main>
+<main>
     <section class="section">
-      <p>Si tienes ideas, sugerencias o detectas algo que podríamos mejorar en Hernavia, usa este formulario para comunicarte con nosotros:</p>
-
-      <div class="frase">
-        <img src="img/puedenideas.png" alt="Icono ideas" width="32" height="32" loading="lazy">
-        <span>¿Puedes cambiar el futuro?</span>
-      </div>
-
-      <button class="audio-boton" id="play-audio">▶ Escuchar</button>
-      <audio id="audio-futuro" src="futuro.mp3" preload="none"></audio>
-
-      <form action="https://formspree.io/f/xldpgjop" method="POST">
-        <label for="nombre">Nombre (opcional):</label>
-        <input type="text" id="nombre" name="nombre">
-
-        <label for="correo">Correo (opcional):</label>
-        <input type="email" id="correo" name="correo">
-
-        <label for="asunto">Asunto:</label>
-        <input type="text" id="asunto" name="asunto" required>
-
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-
-        <button type="submit">Enviar sugerencia</button>
-      </form>
+        <h2>¿Qué significa unirse?</h2>
+        <p class="texto-largo">
+            Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
+            Es compartir una visión, una forma de entender la comunidad y asumir la identidad hernaviana como una manera de vivir con orgullo, unión y compromiso.
+        </p>
     </section>
 
     <section class="section">
-      <h2>También puedes seguirnos</h2>
-      <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">Instagram Hernavia</a></p>
-      <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">YouTube Hernavia</a></p>
+        <h2>Principios de la Identidad Hernaviana</h2>
+        <ul>
+            <li><strong>Paz hernaviana:</strong> construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
+            <li><strong>Innovación hernaviana:</strong> crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
+            <li><strong>Respeto hernaviano por la naturaleza y cuidado del agua:</strong> cuidar lo que nos rodea y los recursos vitales como el agua es parte esencial de nuestro entorno.</li>
+        </ul>
     </section>
-  </main>
 
-  <footer>
-    &copy; 2025 Hernavia — Proyecto Cultural
-  </footer>
+    <section class="section">
+        <h2>Más que un símbolo</h2>
+        <p class="texto-largo">
+            La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos:  
+            son colores para enorgullecerse, para gritar y para seguir.  
+            Imagina un partido de fútbol donde grites por Hernavia y sus colores.  
+            ¿Te emociona esa idea o tienes otra en mente?
+        </p>
+    </section>
 
-  <script>
-    document.getElementById('play-audio').addEventListener('click', () => {
-      const audio = document.getElementById('audio-futuro');
-      audio.play();
-    });
-  </script>
+    <section class="section">
+        <h2>La esencia hernaviana</h2>
+        <p class="texto-largo">
+            La identidad hernaviana representa valores que hoy en día parecen olvidados:  
+            el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
+            la verdad, el respeto mutuo o hasta el poder salir a la calle sin miedo.  
+            Todos estos siempre se escuchan, pero rara vez se ven avances reales.  
+            Por eso, nosotros tomaremos la batuta para hacer lo que nadie más, aunque no se puede lograr sin ti.  
+            Si quieres que las cosas cambien, cambia tú también.  
+            Todo eso y más hace parte de ser hernaviano.
+        </p>
+    </section>
+
+    <section class="section" style="text-align:center;">
+        <p>Recuérdala, tal vez un día no puedas olvidarla.</p>
+        <img src="img/bandera.png" 
+             alt="Bandera de Hernavia, símbolo cultural de la identidad hernaviana" 
+             class="bandera" 
+             width="283" 
+             height="188" 
+             fetchpriority="high">
+    </section>
+    
+    <section class="section" style="text-align:center;">
+        <h2 style="color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
+
+        <div style="text-align:center;">
+            <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+        </div>
+
+        <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px; text-align:left;">
+
+            <details class="faq-card">
+                <summary>¿Qué es Hernavia?</summary>
+                <p>Hernavia es una identidad colectiva y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión compartida.</p>
+            </details>
+
+            <details class="faq-card">
+                <summary>¿Hernavia es un país real?</summary>
+                <p>Puede considerarse una micronación o comunidad cultural no reconocida oficialmente. Aunque no tenga reconocimiento legal, funciona como una organización con principios, valores y proyectos propios.</p>
+            </details>
+
+            <details class="faq-card">
+                <summary>¿Cuáles son los principios de Hernavia?</summary>
+                <p>Se fundamenta en la paz, la innovación, el respeto por la naturaleza, el cuidado del agua, la unión comunitaria y la verdad.</p>
+            </details>
+
+            <details class="faq-card">
+                <summary>¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
+                <p>Sí. Aunque no tengas ciudadanía hernaviana, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
+            </details>
+
+        </div>
+    </section>
+</main>
+
+<footer>
+    &copy; 2025 Hernavia - Proyecto Cultural
+</footer>
+
+<script>
+const toggleButton = document.getElementById('toggleFAQ');
+const faqContainer = document.getElementById('faqContainer');
+let visible = false;
+
+toggleButton.addEventListener('click', () => {
+    visible = !visible;
+    faqContainer.style.display = visible ? 'block' : 'none';
+    toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
+});
+</script>
+
 </body>
 </html>
