--- a/index.html
+++ b/index.html
@@ -3,25 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hernavia</title>
-  <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
-  <meta name="theme-color" content="#ffffff">
+  <title>Hernavia - Proyectos Culturales</title>
+  <meta name="description" content="Conoce Hernavia, una identidad donde la naturaleza, la paz y la innovación se unen para mejorar el futuro de nuestra comunidad.">
+  <meta name="keywords" content="Hernavia, proyectos cultural, proyectos social, identidad, comunidad, sostenibilidad, creatividad, naturaleza, agua, paz, innovación">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- Ícono -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-
-  <!-- Precarga de estilos -->
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
-
-  <!-- Manifesto para PWA -->
   <link rel="manifest" href="manifest.json">
-
-  <!-- URL canónica -->
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
+
+  <meta property="og:title" content="Hernavia - Proyectos Culturales">
+  <meta property="og:description" content="Conoce Hernavia, una identidad donde la naturaleza, la paz y la innovación se unen para mejorar el futuro de nuestra comunidad.">
+  <meta property="og:image" content="https://hernavia.github.io/Hernavia/img/og-image.png">
+  <meta property="og:url" content="https://hernavia.github.io/Hernavia/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Hernavia - Proyectos Culturales">
+  <meta name="twitter:description" content="Conoce Hernavia, una identidad donde la naturaleza, la paz y la innovación se unen para mejorar el futuro de nuestra comunidad.">
+  <meta name="twitter:image" content="https://hernavia.github.io/Hernavia/img/og-image.png">
 </head>
+
 
 <body>
   <header>
@@ -124,4 +130,3 @@
   </script>
 </body>
 </html>
-
