--- a/documentos.html
+++ b/documentos.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documentos de Hernavia</title>
-  <meta name="description" content="Descubre los documentos iniciales de Hernavia para conocer sus principios y organización.">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="author" content="Proyecto Hernavia">
-  <meta name="robots" content="index, follow">
-
-  <!-- Ícono -->
-  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-
-  <!-- Precarga de estilos -->
-  <link rel="preload" href="estilo.css" as="style">
-  <link rel="stylesheet" href="estilo.css">
-
-  <!-- Manifesto para PWA -->
-  <link rel="manifest" href="manifest.json">
-
-  <!-- URL canónica -->
-  <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Documentos — Hernavia</title>
+<meta name="description" content="Explora los documentos iniciales de Hernavia para conocer sus principios, organización y visión cultural.">
+<meta name="keywords" content="hernavia, documentos, leyes Hernavia, Carta fundacional, proyecto cultural, identidad, comunidad, sostenibilidad, creatividad, naturaleza, agua, paz, innovación">
+<meta name="theme-color" content="#ffffff">
+<meta name="author" content="Proyecto Hernavia">
+<meta name="robots" content="index, follow">
+<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+<link rel="preload" href="estilo.css" as="style">
+<link rel="stylesheet" href="estilo.css">
+<link rel="manifest" href="manifest.json">
+<link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
 </head>
+
 
 <body>
   <header>
