--- a/carta.html
+++ b/carta.html
@@ -5,41 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carta Fundacional - Hernavia</title>
   <meta name="description" content="Carta Fundacional de Hernavia: principios, estructura y objetivos que guían a la comunidad hernaviana.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="author" content="Proyecto Hernavia">
+  <meta name="robots" content="index, follow">
+
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
-  <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Proyecto Hernavia">
   <link rel="manifest" href="manifest.json">
-  <style>
-    section.carta {
-      min-height: 600px;
-      line-height: 1.6;
-      text-align: justify;
-      padding: 20px;
-      max-width: 900px;
-      margin: 20px auto;
-      background-color: white;
-      border-left: 8px solid #006A44;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    section.carta h2, section.carta h3, section.carta h4 {
-      color: #006A44;
-    }
-    .bandera {
-      display: block;
-      width: 300px;
-      height: auto;
-      aspect-ratio: 3/2;
-      margin: 15px auto;
-      border: 4px solid #006A44;
-      border-radius: 8px;
-    }
-  </style>
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
 </head>
-
+  
 <body>
   <header>
     <h1>Carta Fundacional de Hernavia</h1>
