--- a/carta.html
+++ b/carta.html
@@ -32,7 +32,7 @@
   </nav>
 
   <main>
-    <section class="carta">
+    <section class="texto-largo">
       <h2>Preámbulo</h2>
       <p>Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios de respeto, justicia, innovación, progreso y fraternidad.</p>
 
