--- a/leyes.html
+++ b/leyes.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leyes Transitorias de Hernavia</title>
-    <meta name="description" content="Consulta las Leyes Transitorias de Hernavia, que regulan la ciudadanía, los aportes y la organización comunitaria.">
+    <meta name="description" content="Consulta las Leyes Transitorias de Hernavia, para entender tes derechos deberes y demas como ciudadano.">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="keywords" content="Hernavia, leyes transitorias, ciudadanía, comunidad, aportes, organización, proyecto cultural, identidad, sostenibilidad, creatividad, naturaleza, paz, innovacion">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
@@ -13,6 +15,7 @@
     <meta name="author" content="Proyecto Hernavia">
     <link rel="manifest" href="manifest.json">
 </head>
+
 
 <body>
 
