--- a/consultas.html
+++ b/consultas.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consultas - Hernavia</title>
-  <meta name="description" content="Participa en la planeación del logo y escudo de Hernavia. Envía tus ideas antes de la futura votación comunitaria.">
+  <meta name="description" content="Participa en las consultas que se realizen para decidir sobre diversas cosas o salo saber que opinan.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="Hernavia, consultas, comunidad, identidad, participación, proyecto cultural, creatividad, sostenibilidad, naturaleza, paz, innovación">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/consultas.html">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Proyecto Hernavia">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
