--- a/simbolos.html
+++ b/simbolos.html
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Símbolos - Hernavia</title>
   <meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema e himno que representan la identidad de nuestra comunidad.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="Hernavia, símbolos, bandera, himno, lema, identidad, comunidad, cultura, creatividad, sostenibilidad, naturaleza, paz, innovación">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/simbolos.html">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Proyecto Hernavia">
+  <link rel="manifest" href="manifest.json">
 </head>
+
 
 <body>
 <header>
