--- a/comounirse.html
+++ b/comounirse.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>¿Cómo unirse? - Hernavia</title>
-  <meta name="description" content="Formulario e información sobre cómo unirse a Hernavia. Participa y forma parte de nuestra comunidad.">
+  <meta name="description" content="Podras enviar tu solicitu de ciudadania virtual para cuando esta se active, forma parte de nuestra comunidad.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="Hernavia, unirse, ciudadanía, comunidad, identidad, participación, cultura, sostenibilidad, creatividad, naturaleza, paz, innovación">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/comounirse.html">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Proyecto Hernavia">
+  <link rel="manifest" href="manifest.json">
 </head>
+
 
 <body>
 <header>
